name:                haskell-book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/prikhi/haskell-book#readme
license:             GPL-3.0
author:              Pavan Rikhi
maintainer:          pavan.rikhi@gmail.com
copyright:           2017 Pavan Rikhi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    exposed-modules:        Ch14
    ghc-options:            -Wall
    build-depends:          base >= 4.7 && < 5
                          , hspec
                          , QuickCheck
    hs-source-dirs:         src
    default-language:       Haskell2010
