name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/prikhi/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Pavan Rikhi
maintainer:          pavan.rikhi@gmail.com
copyright:           2017 Pavan Rikhi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , containers
                     , morse
  default-language:    Haskell2010

test-suite morse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , containers
                     , morse
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/prikhi/morse
